content/ObsidianVault/projects/Воркшопы и митапы/ПА/v1/Практическое задание.md
###### Вводная информация о подходе "Архитектура как данные" и пререквизитах
Мы описываем архитектуру в виде конфигурационных файлов yaml, плагин их собирает, транслирует в JSON и представляет это в виде удобном для восприятия. 
В SDK IDEA есть все возможности для максимально эффективной работы с кодом - подстановки, проверки и т.п. В ходе описания архитектуры как данных мы фактически описываем ее по ключам (keys )и значениям (values).
Для проведения воркшопа используется:
- ПК Windows 11 Pro (для выполнения практических заданий возможны другие платформы, см. документацию по развертыванию DocHub)
- IntelliJ IDEA 2023.3.3 (Community Edition)
- плагин DocHub 3.12.1
Настройки плагина DocHub: 
- внешний рендеринг, сервер http://seaf.slsdev.ru/seafplantuml/svg/
- или локальный (personal)
Для использования в ДЗО СБЕР, на основе SEAF CORE была создана адаптация SEAF DZO CORE на основе механик DOCHUB, в целом описывающихся здесь:
https://dochub.info/entities/docs/blank?dh-doc-id=dochub.flex_metamodel.entities
В рамках DZO CORE был расширен атрибутивный состав сущностей CORE в расширении sber. Это видно далее в ходе обзора файлов методологических пакетов SEAF CORE и SEAF DZO CORE.

###### **Развертывание**
1. Выбрать каталог в котором будете создавать описание архитектуры, открыть терминал
2. Установить пример SEAF командой в терминале:
	1. git clone https://github.com/SEAFTeam/seaf-dzo-example.git
	2. cd seaf-dzo-example   - переход в папку
	3. npx archpkg install - установить archpkg и все зависимости стандартного примера seaf-dzo-example

		 *Или есть альтернативный путь отдельной установки методологических пакетов CORE (в этом случае отключать пример далее не потребуется):*
		1. *Установить SEAF Core командой npx archpkg install seaf-core -save*
		2. *Установить SEAF DZO командой npx archpkg install seaf-dzo-core -save*
		
	
###### **Обзор SEAF CORE и DZO CORE**
1. Ознакомление с SEAF Core:
		1. Открыть entities/app/componets . 
		2. Открыть каталог entities/app/contexts .
		3. Открыть каталог entities/app/aspects . 
		4. Открыть каталог entities/app/integrations . 
		5. Открыть каталог entities/app/specifications . 
2. Ознакомление с SEAF DZO Core:
	1. Открыть entities/app/componets . 
	2. Открыть каталог entities/app/aspects . 
	4. Открыть каталог entities/app/integrations .	

**Описание прикладных сервисов Примера
1. Открыть корневой манифест dochub.yaml и отключить развернутый пример seaf-dzo-example
>[!Note hotkey]
> CTRL + / 
> В IDEA удобно использовать это сочетание клавиш для комментирования или раскомментирования строки кода 

3. Создать каталог berezka на том же уровне, где находится каталог architecture.
4. Создадим в каталоге berezka файл services.yaml (пустой)
5. В каталоге berezka создайте dochub.yaml (пустой). В корневом манифест dochub.yaml в секции imports после отключенного примера подключите созданный dochub.yaml. Обратите внимание, работают подсказки после указания целевого каталога файла:
>[!Note hotkey]
> CTRL + Пробел 
> В IDEA удобно использовать это сочетание клавиш для выведения suggestions

Закройте файл корневого манифеста dochub.yaml. 
7. В каталоге berezka создайте файл services.yaml и подключите его в секции imports в созданном файле dochub.yaml.
8. Создайте прикладной сервис sber.berezka.home_cinema:  
```
components:  
  sber.berezka.app.home_cinema:  
    entity: component  
    description: Прикладной сервис Домашний кинотеатр  
    title: Домашний кинотеатр  
    sber:  
      type: service  
      role_model: Централизованная  
      criticality: Business Critical  
      id: ea93d8e7-2303-4621-ad2a-80f2634b3b85  
      class: Иное
```

9. Cоздайте сервис медиаплатформа: sber.berezka.app.mediaplatform:
	
```
  sber.berezka.app.mediaplatform:  
	title: Медиаплатформа  
	entity: component  
	sber:  
	  type: service  
	  access_from_external_networks: true  
	  role_model: Централизованная  
	  criticality: Business Critical  
	  class: CMS (Content Management System)
```	
```


10. Создайте сервисы, из которых состоит рыночный продукт/сервис "Домашний кинотеатр", используя следующие примеры:

```
components:  
  sber.berezka.app.home_cinema.catalog:  
    entity: component  
    title: Каталог фильмов  
    description: Каталог фильмов  
    sber:  
      type: service  
      criticality: Business Critical  
      role_model: Централизованная  
      class: Продуктовая фабрика (основная деятельность)  
  
  sber.berezka.app.home_cinema.payments:  
    entity: component  
    title: Платежи  
    description: Осуществление платежей пользователей за подписки  
    sber:  
      type: service  
      criticality: Business Operational  
      role_model: Централизованная  
      class: Иное  
  
  sber.berezka.app.home_cinema.canals:  
    entity: component  
    title: ТВ-Каналы  
    description: Трансляция ТВ-каналов  
    sber:  
      type: service  
      criticality: Business Operational  
      role_model: Централизованная  
      class: Иное  
  
  sber.berezka.app.home_cinema.auth:  
    entity: component  
    title: Прикладной сервис аутентификации  
    description: Авторизация пользователей для доступа к Домашнему кинотеарту  
    sber:  
      type: service  
      criticality: Business Critical  
      role_model: Централизованная  
      class: Клиентский профиль (Customer Information File)  
  
  sber.berezka.1c:  
    entity: component  
    title: 1C  
    sber:  
      type: service  
      role_model: Нецентрализованная  
      criticality: Office Productivity  
      class: Бухгалтерия и финансы
```

###### Ознакомление с Соглашением об именовании сущностей и объектов

Ознакомиться на диаграмме и в ридми репозиториев с правилами именования сущностей и объектов описания архитектуры.
Создание примера компонента по DDD из трех уровней. Возможно создавать домены на основе структурирования: 1. по организациям (организационным единицам или вертикалям бизнеса) 2. продуктовая единица (домен связан с продуктами или услугами предоставляемыми предприятием, такими как цифровые продукты  3. Сервисная единица (домен управления связан с предоставлением конкретных сервисов). 
###### **Описание прикладных компонентов Примера
1. Создание файла компонентов. Импорт его в корневом файле
2. Создание примера компонента. Создайте в файле components.yaml описание компонентов по примеру с учетом атрибутов в расширении sber:

```
 components:  
  sber.berezka.app.home_cinema.catalog.db:  
    title: БД для хранения информации о фильмах  
    entity: component  
    description: База данных для хранения информации о фильмах, актёрах, режиссёрах  
    type: component  
    sber:  
      type: component  
      component_type: Реляционная СУБД  
      is_component_of: sber.berezka.app.home_cinema.catalog  
  sber.berezka.app.home_cinema.catalog.search:  
    title: Поиск контента  
    entity: component  
    description: Механизмы поиска и фильтрации фильмов по различным критериям (жанр, год выпуска, рейтинг и т.д.).  
    type: component  
    sber:  
      type: component  
      component_type: Сервер Приложений  
      is_component_of: sber.berezka.app.home_cinema.catalog
```

###### Описание Аспектов Примера
1. Создать необходимую для описания аспектов структуру файлов и каталогов
2. Создать описание Аспектов на основе примера:

```
aspects:  
  sber:  
    title: Сбер  
    location: Архитектура/Прикладная/Аспекты  
  sber.berezka:  
    title: ООО Березка  
    location: Архитектура/Прикладная/Аспекты  
  sber.berezka.app:  
    title: Карта функциональности прикладных сервисов  
    location: Архитектура/Прикладная/Аспекты  
  sber.berezka.app.home_cinema:  
    title: Карта функциональности сервиса "Онлайн-кинотеатр"  
    location: Архитектура/Прикладная/Аспекты  
  sber.berezka.app.auth:  
    title: Аутентификация  
    type: functionality  
    location: Архитектура/Прикладная/Аспекты  
    sber:  
      description: Функции идентификации аутентификации  
      state: Используется  
  sber.berezka.app.mediaplatform:  
    title: Карта функциональности медиаплатформы  
    type: functionality  
    location: Архитектура/Прикладная/Аспекты  
    sber:  
      state: Используется  
      id: lkjsdf  
      description: Карта функциональности медиаплатформы  
  sber.berezka.app.home_cinema.tv_streaming:  
    location: Архитектура/Прикладная/Аспекты  
    type: functionality  
    title: стриминг  
    sber:  
      description: трансляция ТВ и прочего контента  
      id: ывап  
      state: Используется  
  sber.berezka.app.home_cinema.tv_streaming.multiplex1:  
    title: ТВ-каналы первый мультиплекс  
    type: functionality  
    location: Архитектура/Прикладная/Аспекты  
    sber:  
      description: Трансляция каналов первого мультиплекса  
      id: 14909db1-77a0-4428-905d-0686fc3f4f1f  
      state: Используется  

```

Привяжите уже описанные сервисы или компоненты для созданной структуры аспектов по примеру:
```
components:  
  sber.berezka.app.home_cinema:  
    title: Продукт/Прикладной сервис Домашний кинотеатр  
    entity: component  
    aspects:  
      - sber.berezka.app.home_cinema.tv_streaming.multiplex1  
      - sber.berezka.app.home_cinema.tv_streaming  
      - sber.berezka.app.auth  
      - sber.berezka.app.home_cinema.search
```


###### Создание контекстов для представления прикладной архитектуры
Создайте три контекста:
```
contexts:  
  sber.berezka.app:  
    title: Прикладные сервисы Компании  
    location: Прикладные сервисы  
    components:  
      - sber.berezka.app.home_cinema  
      - sber.berezka.app.mediaplatform  
  sber.berezka.app.home_cinema:  
    title: Компоненты сервиса Домашний кинотеатр  
    location: Компоненты сервиса Домашний кинотеатр  
    components:  
      - sber.berezka.app.home_cinema.auth  
      - sber.berezka.app.home_cinema.payments  
  sber.berezka.app.mediaplatform:  
    title: Компоненты медиаплатформы  
    location: Компоненты медиаплатформы  
    components:  
      - sber.berezka.app.mediaplatform.component
```
Для того, чтобы сделать детализацию (дриллдаун через компонент из одного контекста в другой), нужно чтобы идентификатор контекста был такой же как идентификатор детализируемого объекта.
При создании контекста содержание можно ограничивать через поле extra-links (по умолчанию атрибут имеет значение true) или использовать .** 
###### Создание интеграций (TBD для Примера)

```
seaf.app.integrations:  
  sber.berezka.app.integrations.home_cinema:  
    title: Интеграции сервиса  
    from: sber.berezka.app.home_cinema  
    description: Взаимодействие сервиса с платформой  
    to: sber.berezka.app.mediaplatform  
    sber:  
      agreement: Контракт  
      id: HC01  
      async: Истинно  
      status: Используется  
      protected:  
        - СЗИ1  
      technical-use: По событию  
      changes: Описание изменений  
      comments:  
        - комментарий 1  
      load:  
        maximum: не более 1000  
      technologies:  
        - API
```


###### Распределенное описание архитектуры (TBD для Примера)

Демонстрация разнесения описания архитектурных элементов по различным файлам и ответственным за описание. С целью распределения нагрузки по описанию архитектуры на различные команды или роли. Разносить можно не только компоненты по степени детализации, но и один компонент можно описать в различных файлах. (необходимо дополнить пример).



