content/ObsidianVault/projects/Воркшопы и митапы/ПА/v2/Практическое задание.md
##### Вводная информация о подходе "Архитектура как данные" и пререквизитах
Мы описываем архитектуру в виде конфигурационных файлов yaml, плагин их собирает, транслирует в JSON и представляет это в виде удобном для восприятия. 
В SDK IDEA есть все возможности для максимально эффективной работы с кодом - подстановки, проверки и т.п. В ходе описания архитектуры как данных мы фактически описываем ее по ключам (keys )и значениям   (values).
Для проведения воркшопа используется:
- ПК Windows 11 Pro (для выполнения практических заданий возможны другие платформы, см. документацию по развертыванию DocHub)
- IntelliJ IDEA 2023.3.3 (Community Edition)
- плагин DocHub 3.12.1

Настройки плагина DocHub: 
- внешний рендеринг, сервер http://seaf.slsdev.ru/seafplantuml/svg/
- или локальный (personal)
Для использования в ДЗО СБЕР, на основе SEAF CORE была создана адаптация SEAF DZO CORE на основе механик DOCHUB, в целом описывающихся здесь:
https://dochub.info/entities/docs/blank?dh-doc-id=dochub.flex_metamodel.entities
В рамках DZO CORE был расширен атрибутивный состав сущностей CORE в расширении sber. Это видно далее в ходе обзора файлов методологических пакетов SEAF CORE и SEAF DZO CORE.

###### **Развертывание**
1. Выбрать каталог в котором будете создавать описание архитектуры, открыть терминал
2. Установить пример SEAF командой в терминале:
	1. git clone https://github.com/SEAFTeam/seaf-dzo-example.git
	2. cd seaf-dzo-example - переход в папку
	3. npx archpkg install - установить archpkg и все зависимости стандартного примера seaf-dzo-example

		 *Или есть альтернативный путь отдельной установки методологических пакетов CORE (в этом случае отключать пример далее не потребуется):*
		1. *Установить SEAF Core командой npx archpkg install seaf-core -save*
		2. *Установить SEAF DZO командой npx archpkg install seaf-dzo-core -save*
		
###### **Обзор SEAF CORE и DZO CORE**
1. Ознакомление с SEAF Core:
		1. Открыть entities/app/componets . 
		2. Открыть каталог entities/app/contexts .
		3. Открыть каталог entities/app/aspects . 
		4. Открыть каталог entities/app/integrations . 
		5. Открыть каталог entities/app/specifications . 
2. Ознакомление с SEAF DZO Core:
	1. Открыть entities/app/componets . 
	2. Открыть каталог entities/app/aspects . 
	4. Открыть каталог entities/app/integrations .	
3. По результатам развертывания у вас подключен пример seaf-dzo-example. Открыть корневой манифест dochub.yaml и отключить развернутый пример seaf-dzo-example (для последующего описания на практическом задании, к нему можно вернуться позже)
>[!Note hotkey]
> CTRL + / 
> В IDEA удобно использовать это сочетание клавиш для комментирования или раскомментирования строки кода 

##### **Общая информация о Компании**

Для примера описания архитектуры различных слоев и детализации используется условная компания "Онлайн-кинотеатр" (далее - Компания, условное наименование компании в примере: astream).

Миссия Компании: создание персонального мира развлекательного контента, который знает тебя и подстраивается под твои интересы.

Продукты Компании: домашний кинотеатр, с помощью которого можно на любых устройствах смотреть фильмы, ТВ-каналы и другой контент и медиаплатформа, предоставляемая на рынок.

Ценности Компании:
1. Доступность
2. Разнообразие
3. Адаптивность

Доступность Продуктов означает:
1. Доступ через экосистемную подписку
2. Оплата подписок
3. Просмотр на любом устройстве и другие требования

Разнообразие предоставляемого контента означает:
1. Контент: фильмы, сериалы, трансляция ТВ-каналов
2. Рекомендации на основе истории и твоих интересов ...

Адаптивность контента и Продуктов означает:
1. Пополнение контента по интересам и рейтингам ...

**Описание прикладных сервисов Примера

3. Создать каталог astream на том же уровне, где находится каталог architecture.
4. Создадим в каталоге astream файл services.yaml (пустой)
5. В каталоге astream создайте dochub.yaml (пустой). В корневом манифест dochub.yaml в секции imports после отключенного примера подключите созданный dochub.yaml. Обратите внимание, работают подсказки после указания целевого каталога файла:
>[!Note hotkey]
> CTRL + Пробел 
> В IDEA удобно использовать это сочетание клавиш для выведения suggestions

8. Создайте иерархию компонентов и прикладной сервис sber.astream.app.home_cinema на базе компонента прикладной архитектуры с типом service и обязательными атрибутам:  
```
components:  
  sber.astream:  
    entity: component  
    title: Компания Astream  
    type: service  
  sber.astream.app:  
    entity: component  
    title: Слой прикладной архитектуры  
    type: service  
  sber.astream.app.home_cinema:  
    entity: component  
    title: >-  
      Сервис Домашний   
      кинотеатр  
    type: service  
    sber:  
      criticality: Mission Critical  
      class: Иное  
      role_model: Централизованная
```

9. Cоздайте сервис медиаплатформа: sber.astream.app.mediaplatform:
	
```
sber.astream.app.mediaplatform:  
  title: Медиаплатформа  
  entity: component  
  type: service  
  sber:  
    role_model: Централизованная  
    criticality: Business Critical  
    class: CMS (Content Management System)
```


10. Создайте сервисы, из которых состоит рыночный продукт/сервис "Домашний кинотеатр":
```
sber.berezka.app.home_cinema.catalog
sber.berezka.app.home_cinema.payments
sber.berezka.app.home_cinema.canals
sber.berezka.app.home_cinema.auth
```
используя следующие примеры:
>[!Note]
> ">-"
> Конструкция для мультилайна

>[!Note]
>  Не использовать спецсимволы в названиях (заголовках)

```
components:  
  sber.astream.app.home_cinema.catalog:  
    entity: component  
    title: >-  
      Сервис каталог фильмов  
    type: service  
    description: Каталог фильмов  
#    aspects:  
#      - aspects_sber.astream.app.home_cinema.media_storage  
#      - aspects_sber.astream.app.home_cinema.search  
#      - aspects_sber.astream.app.home_cinema.tv_streaming  
#      - aspects_sber.astream.app.home_cinema.tv_streaming.multiplex1  
    sber:  
      criticality: Business Critical  
      role_model: Централизованная  
      class: Продуктовая фабрика (основная деятельность)  
  
  sber.astream.app.home_cinema.payments:  
    entity: component  
    title: Сервис платежей  
    description: Осуществление платежей пользователей за подписки  
    type: service  
    sber:  
      criticality: Business Operational  
      role_model: Централизованная  
      class: Иное  
  
  sber.astream.app.home_cinema.canals:  
    entity: component  
    title: Сервис трансляции ТВ-Каналов  
    description: Трансляция ТВ-каналов  
    type: service  
#    aspects:  
#      - aspects_sber.astream.app.home_cinema.tv_streaming  
#      - aspects_sber.astream.app.home_cinema.tv_streaming.multiplex1  
    sber:  
      criticality: Business Operational  
      role_model: Централизованная  
      class: Иное  
  
  sber.astream.app.home_cinema.auth:  
    entity: component  
    title: Cервис аутентификации  
    type: service  
    description: Авторизация пользователей для доступа к Домашнему кинотеатру  
#    aspects:  
#      - aspects_sber.astream.app.auth  
    sber:  
      criticality: Business Critical  
      role_model: Централизованная  
      class: Клиентский профиль (Customer Information File)  
  
  sber.astream.app.erp1c:  
    entity: component  
    title: 1C ERP  
    type: service  
#    aspects:  
#      - aspects_sber.astream.app.accounting  
    sber:  
      role_model:  
      criticality: Office Productivity  
      class: Бухгалтерия и финансы
```

###### Ознакомление с Соглашением об именовании сущностей и объектов

Ознакомиться на диаграмме и в ридми репозиториев с правилами именования сущностей и объектов описания архитектуры.
Создание примера компонента по DDD из трех уровней. Возможно создавать домены на основе структурирования: 1. по организациям (организационным единицам или вертикалям бизнеса) 2. продуктовая единица (домен связан с продуктами или услугами предоставляемыми предприятием, такими как цифровые продукты  3. Слой описания архитектуры (ba, app, ta, ia) 4. Сервисная единица (домен управления связан с предоставлением конкретных сервисов). 
###### **Описание прикладных компонентов Примера
1. Создание файла компонентов. Импорт его в корневом файле
2. Создание примера компонента. Создайте в файле components.yaml описание компонентов:
	1. Компания использует следующие прикладные компоненты для реализации прикладных сервисов (в ходе создания необходимо заполнить базовые атрибуты core и атрибуты в расширении sber):
	2. Сервис управления каталогом фильмов включает компоненты:
		1. База данных для хранения информации о фильмах, актёрах, режиссёрах
		2. Поисковая подсистема: механизмы поиска и фильтрации фильмов по различным критериям (жанр, год выпуска, рейтинг и т.д.).
		3. Мультимедийное хранилище:  подсистема для хранения и управления мультимедийными файлами (постеры, трейлеры, видеофайлы).
	3. Сервис 1С ERP sber.astream.app.erp1c включает следующие компоненты:
		1. Компонент sber.astream.app.erp1c.buh является компонентом типа сервер приложений
		2. Компонент sber.astream.app.erp1c.db является компонентом типа Реляционная СУБД
Пример:
```
components:  
  sber.astream.app.home_cinema.catalog.db:  
    title: БД метаданных контента  
    entity: database  
    description: База данных для хранения информации о фильмах, актёрах, режиссёрах  
    type: component  
#    aspects:  
#      - aspects_sber.astream.app.home_cinema.search  
    sber:  
      component_type: Реляционная СУБД  
      scalability: Нет  
      stores_confidential_data: false  
      provider: Astream  
      provider_type: Собственная разработка  
      is_component_of: sber.astream.app.home_cinema.catalog  
  sber.astream.app.home_cinema.catalog.search:  
    title: Поиск контента  
    entity: component  
    description: Механизмы поиска и фильтрации фильмов по различным критериям (жанр, год выпуска, рейтинг и т.д.).  
    type: component  
#    links:  
#      - id: sber.astream.app.home_cinema.catalog.db  
#        title: Поиск  
#        direction: -->  
#    aspects:  
#      - aspects_sber.astream.app.home_cinema.search  
    sber:  
      component_type: Сервер Приложений  
      scalability: Нет  
      stores_confidential_data: false  
      provider: Astream  
      provider_type: Собственная разработка  
      is_component_of: sber.astream.app.home_cinema.catalog  
  sber.astream.app.home_cinema.catalog.storage:  
    title: Хранение контента  
    entity: component  
    description: Компонент для хранения контента  
    type: component  
#    aspects:  
#      - aspects_sber.astream.app.home_cinema.media_storage  
    sber:  
      component_type: Иное  
      scalability: Нет  
      stores_confidential_data: false  
      provider: Astream  
      provider_type: Собственная разработка  
      is_component_of: sber.astream.app.home_cinema.catalog  
  
```

Включите описание следующих компонентов:
```

  sber.astream.app.home_cinema.auth.token_manager:  
    entity: component  
    type: component  
    title: Менеджер токенов  
    sber:  
      is_component_of: sber.astream.home_cinema.auth  
      component_type: Микросервис  
      scalability: Горизонтальная  
      store_confidential_data: false  
      id: 079bdad9-c1c8-412d-93ac-e984e8fe3f8f  
      provider: astream  
      provider_type: Собственная разработка  
      cloud_readiness: Компоненты в гибридном публичном облаке/наборе облаков с управляемыми облачными поставщиками инфраструктурными сервисами (Cloud Native 5)  
  sber.astream.app.home_cinema.auth.session_manager:  
    entity: component  
    type: component  
    title: Менежер сессий  
    sber:  
      is_component_of: sber.astream.app.home_cinema.auth  
      component_type: Микросервис  
      scalability: Горизонтальная  
      provider: astream  
      provider_type: Собственная разработка  
      stores_confidential_data: false  
      cloud_readiness: Компоненты в гибридном публичном облаке/наборе облаков с управляемыми облачными поставщиками инфраструктурными сервисами (Cloud Native 5)  
  sber.astream.app.home_cinema.auth.authentication:  
    entity: component  
    type: component  
    title: Компонент для аутентификации  
    sber:  
      is_component_of: sber.astream.home_cinema.auth  
      component_type: Микросервис  
      scalability: Горизонтальная  
      store_confidential_data: false  
      provider: astream  
      provider_type: Собственная разработка  
      cloud_readiness: Компоненты в гибридном публичном облаке/наборе облаков с управляемыми облачными поставщиками инфраструктурными сервисами (Cloud Native 5)  
  
  sber.astream.app.mediaplatform.component:  
    title: Компонент (Тест)  
    entity: component  
    type: component  
    sber:  
      component_type: NOSQL СУБД  
      provider: флоыва  
      stores_confidential_data: false  
      provider_type: Собственная разработка  
      scalability: Нет  
      is_component_of: sber.astream.app.mediaplatform  
      cloud_readiness: Компоненты в гибридном публичном облаке/наборе облаков с управляемыми облачными поставщиками инфраструктурными сервисами (Cloud Native 5)  
  sber.astream.app.erp1c.buh:  
    entity: component  
    title: 1С Бухгалтерия  
    type: component  
#    links:  
#      - id: sber.astream.app.erp1c.db  
#        direction: -->  
    sber:  
      is_component_of: sber.astream.app.erp1c  
      component_type: Сервер Приложений  
      scalability: Горизонтальная  
      stores_confidential_data: false  
      provider: astream  
      provider_type: Собственная разработка  
      cloud_readiness: Компоненты в гибридном публичном облаке/наборе облаков с управляемыми облачными поставщиками инфраструктурными сервисами (Cloud Native 5)  
  
  sber.astream.app.erp1c.db:  
    entity: database  
    title: БД 1С  
    type: component  
    sber:  
      is_component_of: sber.astream.app.erp1c  
      component_type: Реляционная СУБД  
      scalability: Вертикальная  
      stores_confidential_data: false  
      id: 535db370-62f0-4d9a-ac4c-7a42d06b4ac6  
      provider: Microsoft  
      provider_type: Внешний(Иностранный)  
      cloud_readiness: Монолит на виртуализированном аппаратном обеспечении (Cloud Ready 1)  
  sber.astream.app.home_cinema.payments.gateway:  
    title: Шлюз  
    entity: component  
    type: component  
  
  sber.astream.app.home_cinema.payments.billingengine:  
    title: Биллинг  
    entity: component  
    type: component  
#    links:  
#      - id: sber.astream.app.home_cinema.payments.gateway  
#        direction: -->  
#        title: платежи
```


### Контексты для представления прикладной архитектуры
Создайте в файле contexts.yaml описание как минимум трех контекстов:
1. Для обзора прикладных сервисов компании
2. Обзор прикладного сервиса home_cinema
3. Обзор прикладного сервиса mediaplatform

Создайте контексты по примеру:
```
contexts:  
  sber.astream.app:  
    title: Прикладные сервисы Компании Astream  
    location: Прикладные сервисы  
    presentation: plantuml  
    extra-links: false  
    components:  
      - sber.astream.app.home_cinema  
      - sber.astream.app.mediaplatform  
#      - sber.astream.app.mediaplatform.*  
#      - sber.astream.app.home_cinema.*  
      - sber.astream.app.erp1c  
#      - sber.astream.app.erp1c.*  
  sber.astream.app.home_cinema:  
    title: Прикладные сервисы Кинотеатр  
    location: Прикладные сервисы Домашний кинотеатр  
    extra-links: false  
    components:  
      - sber.astream.app.home_cinema.**  
  sber.astream.app.home_cinema.payments:  
    title: Компоненты сервиса платежей  
    location: Компоненты сервиса платежей  
    #    extra-links: false  
    components:  
      - sber.astream.app.home_cinema.payments.gateway  
      - sber.astream.app.home_cinema.payments.billingengine  
  
  
  sber.astream.app.home_cinema.catalog:  
    title: Компоненты сервиса  
    location: Компоненты сервиса Домашний кинотеатр  
    components:  
      - sber.astream.app.home_cinema.catalog.**  
  #      - sber.astream.app.home_cinema.catalog.search  
  #      - sber.astream.app.home_cinema.catalog.storage  
  #      - sber.berezka.app.home_cinema.payments  sber.astream.app.home_cinema.auth:  
    title: Компоненты сервиса аутентификации  
    location: Компоненты сервиса аутентификации  
    components:  
      - sber.astream.app.home_cinema.auth.**  
  
  sber.astream.app.mediaplatform:  
    title: Компоненты медиаплатформы  
    location: Компоненты медиаплатформы  
    components:  
      - sber.berezka.app.mediaplatform.component  
  sber.astream.app.erp1c:  
    components:  
      - sber.astream.app.erp1c.db  
    location:  
    title: Компоненты 1С
```
Для того, чтобы сделать детализацию (дриллдаун через компонент из одного контекста в другой), нужно чтобы идентификатор контекста был такой же как идентификатор детализируемого объекта.
При создании контекста содержание можно ограничивать через поле extra-links (по умолчанию атрибут имеет значение true) или использовать .** 

###### Описание LINKS
Links предназначены для указания жестких связей между компонентами, задаваемых при проектировании и редко меняющихся впоследствии (например, при проектировании трехзвенной информационной системы)
Например, взаимодействие между сервисами на сервере приложений и базой данных (в контексте примера - взаимодействие сервера приложений 1С с БД или сервиса поиска контента с БД метаданных).
Links лучше указывать к того компонента, который зависит от работы другого компонента (например сервер приложений зависит от БД)
```
sber.astream.app.home_cinema.catalog.search:  
  title: Поиск контента  
  entity: component  
  description: Механизмы поиска и фильтрации фильмов по различным критериям (жанр, год выпуска, рейтинг и т.д.).  
  type: component  
  links:  
    - id: sber.astream.app.home_cinema.catalog.db  
      title: Поиск  
      direction: -->


sber.astream.app.erp1c.buh:  
  links:  
    - id: sber.astream.app.erp1c.db  
      direction: -->


```

###### Описание Аспектов Примера
1. Создать необходимую для описания аспектов структуру файлов и каталогов
2. Создайте описание функциональности в иерархии (карте функциональности) и с учетом расширения sber (пример ниже):
```
  sber:  
  sber.astream:  
  sber.astream.app:  
  sber.astream.app.home_cinema:  
    title: Карта функциональности сервиса "Онлайн-кинотеатр"  
  sber.astream.app.auth:  
  sber.astream.app.mediaplatform:  
  sber.astream.app.home_cinema.tv_streaming:  
  sber.astream.app.home_cinema.tv_streaming.multiplex1:  
```

3. Пример:

```
aspects:  
  aspects_sber:  
    title: Карта функциональности Группы Сбер  
    location: Архитектура/Прикладная/Аспекты  
  aspects_sber.astream:  
    title: Компания Astream  
    location: Архитектура/Прикладная/Аспекты  
  aspects_sber.astream.app:  
    title: Карта функциональности прикладных сервисов  
    location: Архитектура/Прикладная/Аспекты  
  aspects_sber.astream.app.home_cinema:  
    title: Карта функциональности сервиса "Онлайн-кинотеатр"  
    location: Архитектура/Прикладная/Аспекты  
  aspects_sber.astream.app.auth:  
    title: Аутентификация  
    type: functionality  
    location: Архитектура/Прикладная/Аспекты  
    sber:  
      description: Функции идентификации аутентификации  
      id: asdfasdfads  
      state: Используется  
  aspects_sber.astream.app.mediaplatform:  
    title: Карта функциональности медиаплатформы  
    type: functionality  
    location: Архитектура/Прикладная/Аспекты  
    sber:  
      state: Используется  
      id: lkjsdf  
      description: Карта функциональности медиаплатформы  
  
  aspects_sber.astream.app.home_cinema.search:  
    location: Архитектура/Прикладная/Аспекты  
    type: functionality  
    title: Поиск контента  
    sber:  
      description: Поиск контента в каталоге  
      id: mnkjn  
      state: Используется  
  aspects_sber.astream.app.home_cinema.media_storage:  
    location: Архитектура/Прикладная/Аспекты  
    type: functionality  
    title: Хранение контента  
    sber:  
      description: Хранение контента  
      id: mnkjn  
      state: Используется  
  aspects_sber.astream.app.home_cinema.tv_streaming:  
    location: Архитектура/Прикладная/Аспекты  
    type: functionality  
    title: стриминг  
    sber:  
      description: трансляция ТВ и прочего контента  
      id: ывап  
      state: Используется  
  aspects_sber.astream.app.home_cinema.tv_streaming.multiplex1:  
    title: ТВ-каналы первый мультиплекс  
    type: functionality  
    location: Архитектура/Прикладная/Аспекты  
    sber:  
      description: Трансляция каналов первого мультиплекса  
      id: 14909db1-77a0-4428-905d-0686fc3f4f1f  
      state: Используется  
  aspects_sber.astream.app.accounting:  
    location: Архитектура/Прикладная/Аспекты  
    type: functionality  
    title: Бухгалтерский учет  
    sber:  
      description: Учет хозяйственных операций  
      id: lkjllkj  
      state: Используется

```

Привяжите уже описанные сервисы или компоненты для созданной структуры аспектов по примеру:
```
components:  
  sber.berezka.app.home_cinema:  
    title: Продукт/Прикладной сервис Домашний кинотеатр  
    entity: component  
    aspects:  
      - sber.astream.app.home_cinema.tv_streaming.multiplex1  
      - sber.astream.app.home_cinema.tv_streaming  
      - sber.astream.app.auth  
      - sber.astream.app.home_cinema.search
```

Проверить отражение аспектов на контекстных диаграммах

###### Создание интеграций

```
seaf.app.integrations:  
  sber.astream.id_payments_accounting:  
    title: Учет платежей пользователей  
    from: sber.astream.app.home_cinema.payments  
    description: Взаимодействие сервиса с платформой  
    to: sber.astream.app.erp1c.buh  
    sber:  
      agreement: Контракт  
      id: HC01  
      async: Истинно  
      status: Используется  
      protected:  
        - СЗИ1  
      technical-use: По событию  
      changes: Описание изменений  
      comments:  
        - комментарий 1  
      load:  
        maximum: не более 1000  
      data-objects:  
      technologies:  
        - API  
  sber.berezka.app.integrations.home_cinema.int1:  
    from: sber.berezka.app.home_cinema.canals  
    to: sber.berezka.app.home_cinema.payments  
    description: Описание  
    title: Внутреннее взаимодействие сервиса 1  
    sber:  
      status: Используется  
      technologies:  
        - API  
      comments:  
        - Комментарий 1  
      load:  
        maximum: не более N  
        average: в среднем M  
      technical-use: По событию  
      changes: Описание изменений  
      protected:  
        - CPB4  
      async: Ложно  
      id: лрор  
      agreement: Контракт  
      data-objects:
```

Проверить отражение интеграции в таблице интеграций в меню: Архитектура/Прикладная/Интеграции

##### Создание документа для описания сервиса


###### Распределенное описание архитектуры (TBD для Примера)

Демонстрация разнесения описания архитектурных элементов по различным файлам и ответственным за описание. С целью распределения нагрузки по описанию архитектуры на различные команды или роли. Разносить можно не только компоненты по степени детализации, но и один компонент можно описать в различных файлах. (необходимо дополнить пример).



